# materialize-terraform-self-managed

./: .gitignore  CONTRIBUTING.md  PASSWORDLESS-POSTGRES-APPROACH.md  README.md  pyproject.toml
.claude/skills/materialize-terraform-self-managed/: SKILL.md
.github/: dependabot.yml
.github/scripts/: generate-docs.sh
.github/setup/aws/: DEBUGGING_CLEANUP.md  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
.github/setup/azure/: .terraform.lock.hcl  accessTokenLifeTime.sh  backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
.github/setup/gcp/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
.github/workflows/: README.md  advisories.yml  check-schema-sync.yml  lint.yml  merge_queue.yml  pr.yml  test-aws.yml  test-azure.yml  test-gcp.yml  test-kind.yml  test-on-approval.yml  test-python.yml
aws/: README.md
aws/examples/enterprise/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
aws/examples/migration/: .gitignore  README.md  auto-migrate.py  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
aws/examples/simple/: .terraform.lock.hcl  README.md  main.tf  materialize-operator-v25.2.0-beta.1.tgz  (+4 more)
azure/: README.md
gcp/: README.md
kubernetes/: README.md
scripts/: __init__.py  check_schema_sync.py  generate_terraform_types.py  migrate_base.py
test/: .gitignore  Cargo.toml  README.md  deny.toml  go.mod  go.sum
test/aws/: .env  .env.example  README.md  go.mod  go.sum  s3_backend_helpers.go  staged_deployment_test.go  test_constants.go  test_helpers.go
test/aws/fixtures/database/: main.tf  outputs.tf
test/aws/fixtures/eks/: main.tf
test/aws/fixtures/materialize/: main.tf  outputs.tf  variables.tf  versions.tf
test/aws/fixtures/networking/: main.tf  outputs.tf  variables.tf  versions.tf
test/azure/: .env  README.md  staged_deployment_test.go  test_constants.go  test_helpers.go
test/azure/fixtures/materialize/: main.tf  outputs.tf  variables.tf
test/azure/fixtures/networking/: main.tf  outputs.tf  variables.tf  versions.tf
test/azurem/: .env  README.md  s3_backend_helpers.go  staged_deployment_test.go  test_constants.go  test_helpers.go
test/azurem/fixtures/aks/: main.tf  variables.tf  versions.tf
test/azurem/fixtures/database/: main.tf
test/azurem/fixtures/materialize/: main.tf  outputs.tf  variables.tf  versions.tf
test/azurem/fixtures/networking/: main.tf
test/gcp/: .env  README.md  go.mod  go.sum  networking_test.go  s3_backend_helpers.go  staged_deployment_test.go  test_constants.go  test_helpers.go
test/gcp/fixtures/database/: main.tf  outputs.tf  variables.tf
test/gcp/fixtures/gke/: main.tf  outputs.tf  variables.tf
test/gcp/fixtures/materialize/: main.tf  outputs.tf  variables.tf  versions.tf
test/gcp/fixtures/networking/: main.tf  variables.tf  versions.tf
test/src/: cli.rs  helpers.rs  main.rs  types.rs
test/src/commands/: apply.rs  destroy.rs  init.rs  list.rs  mod.rs  purge.rs  sync.rs  verify.rs
test/utils/: constants.go
test/utils/basesuite/: baseSuite.go
test/utils/config/: config.go
test/utils/dir/: copy.go  helpers.go
test/utils/helpers/: backend_override.tf.template  connectivity.go  terraform.go  workspace.go
test/utils/s3backend/: backend.go  config.go  manager.go
tests/: __init__.py  conftest.py  test_generate_terraform_types.py  test_kind_integration.py
tests/fixtures/: crd_schema.json  expected_crd_vars.tf  expected_helm_vars.tf  helm_params.yml
tests/kind/: cluster.yaml
(+413 files in other folders)
