[package]
name = "terraform-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
aws-config = { version = "1.8.15", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.129.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
chrono = "0.4"
clap = { version = "4.5.36", features = ["derive", "env"] }
hcl-edit = "0.9"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
