[package]
name = "terraform-tests"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
aws-config = { version = "1.8.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.133.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "env"] }
hcl-edit = "0.9.6"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
